--- a/puppet_classes/munge_3A_3Aconfig.html
+++ b/puppet_classes/munge_3A_3Aconfig.html
@@ -6,15 +6,15 @@
 <title>
   Puppet Class: munge::config
   
-    &mdash; Documentation by YARD 0.9.19
+    &mdash; Documentation by YARD 0.9.25
   
 </title>
 
-  <link rel="stylesheet" href="../css/style.css" type="text/css" charset="utf-8" />
+  <link rel="stylesheet" href="../css/style.css" type="text/css" />
 
-  <link rel="stylesheet" href="../css/common.css" type="text/css" charset="utf-8" />
+  <link rel="stylesheet" href="../css/common.css" type="text/css" />
 
-<script type="text/javascript" charset="utf-8">
+<script type="text/javascript">
   pathId = "puppet_classes::munge::config";
   relpath = '../';
 </script>
@@ -85,6 +85,7 @@
 <div class="tags">
   
 
+
 </div><div class="method_details_list">
   <table class="source_code">
     <tr>
@@ -103,7 +104,47 @@
 11
 12
 13
-14</pre>
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54</pre>
       </td>
       <td>
         <pre class="code"><span class="info file"># File 'manifests/config.pp', line 3</span>
@@ -111,14 +152,54 @@
 class munge::config {
 
   file { &#39;/etc/munge/munge.key&#39;:
-    ensure =&gt; &#39;file&#39;,
-    path   =&gt; $::munge::munge_key_path,
-    owner  =&gt; &#39;munge&#39;,
-    group  =&gt; &#39;munge&#39;,
-    mode   =&gt; &#39;0400&#39;,
-    source =&gt; $::munge::munge_key_source,
+    ensure  =&gt; &#39;file&#39;,
+    path    =&gt; $::munge::munge_key_path,
+    owner   =&gt; $::munge::user,
+    group   =&gt; $::munge::group,
+    mode    =&gt; &#39;0400&#39;,
+    source  =&gt; $::munge::munge_key_source,
+    content =&gt; $::munge::munge_key_content,
   }
 
+  if $::munge::conf_dir {
+    file { &#39;/etc/munge&#39;:
+      ensure =&gt; &#39;directory&#39;,
+      path   =&gt; $::munge::conf_dir,
+      owner  =&gt; $::munge::user,
+      group  =&gt; $::munge::group,
+      mode   =&gt; &#39;0700&#39;,
+    }
+  }
+
+  if $::munge::log_dir {
+    file { &#39;/var/log/munge&#39;:
+      ensure =&gt; &#39;directory&#39;,
+      path   =&gt; $::munge::log_dir,
+      owner  =&gt; $::munge::user,
+      group  =&gt; $::munge::group,
+      mode   =&gt; &#39;0700&#39;,
+    }
+  }
+
+  if $::munge::lib_dir {
+    file { &#39;/var/lib/munge&#39;:
+      ensure =&gt; &#39;directory&#39;,
+      path   =&gt; $::munge::lib_dir,
+      owner  =&gt; $::munge::user,
+      group  =&gt; $::munge::group,
+      mode   =&gt; &#39;0700&#39;,
+    }
+  }
+
+  if $::munge::run_dir {
+    file { &#39;/run/munge&#39;:
+      ensure =&gt; &#39;directory&#39;,
+      path   =&gt; $::munge::run_dir,
+      owner  =&gt; $::munge::user,
+      group  =&gt; $::munge::group,
+      mode   =&gt; &#39;0755&#39;,
+    }
+  }
 }</pre>
       </td>
     </tr>
