--- a/file.README.html
+++ b/file.README.html
@@ -6,7 +6,7 @@
 <title>
   File: README
   
-    &mdash; Documentation by YARD 0.9.26
+    &mdash; Documentation by YARD 0.9.34
   
 </title>
 
@@ -60,10 +60,7 @@
       <div id="content"><div id='filecontents'>
 <h1 id="label-puppet-munge">puppet-munge</h1>
 
-<p><a href="https://forge.puppetlabs.com/treydock/munge"><img
-src="http://img.shields.io/puppetforge/v/treydock/munge.svg"></a> <a
-href="https://travis-ci.org/treydock/puppet-munge"><img
-src="https://travis-ci.org/treydock/puppet-munge.png"></a></p>
+<p><a href="https://forge.puppetlabs.com/treydock/munge"><img src="http://img.shields.io/puppetforge/v/treydock/munge.svg"></a> <a href="https://travis-ci.org/treydock/puppet-munge"><img src="https://travis-ci.org/treydock/puppet-munge.png"></a></p>
 
 <h4 id="label-Table+of+Contents">Table of Contents</h4>
 <ol><li>
@@ -71,13 +68,11 @@ src="https://travis-ci.org/treydock/puppet-munge.png"></a></p>
 </li><li>
 <p><a href="#usage">Usage - Configuration options</a></p>
 </li><li>
-<p><a href="#reference">Reference - Parameter and detailed reference to all
-options</a></p>
+<p><a href="#reference">Reference - Parameter and detailed reference to all options</a></p>
 </li><li>
 <p><a href="#limitations">Limitations - OS compatibility, etc.</a></p>
 </li><li>
-<p><a href="#development">Development - Guide for contributing to the
-module</a></p>
+<p><a href="#development">Development - Guide for contributing to the module</a></p>
 </li><li>
 <p><a href="#todo">TODO</a></p>
 </li><li>
@@ -101,49 +96,26 @@ module</a></p>
 
 <h2 id="label-Reference">Reference</h2>
 
-<p><a
-href="http://treydock.github.io/puppet-munge/">treydock.github.io/puppet-munge/</a></p>
+<p><a href="http://treydock.github.io/puppet-munge/">treydock.github.io/puppet-munge/</a></p>
 
 <h2 id="label-Limitations">Limitations</h2>
 
 <p>This module has been tested on:</p>
 <ul><li>
-<p>CentOS/RedHat 6 x86_64</p>
+<p>RedHat/CentOS 7</p>
 </li><li>
-<p>CentOS/RedHat 7 x86_64</p>
-</li></ul>
-
-<h2 id="label-Development">Development</h2>
-
-<h3 id="label-Testing">Testing</h3>
-
-<p>Testing requires the following dependencies:</p>
-<ul><li>
-<p>rake</p>
+<p>RedHat/Rocky/AlmaLinux 8</p>
 </li><li>
-<p>bundler</p>
+<p>RedHat/Rocky/AlmaLinux 9</p>
+</li><li>
+<p>Debian 10</p>
+</li><li>
+<p>Debian 11</p>
+</li><li>
+<p>Ubuntu 20.04</p>
+</li><li>
+<p>Ubuntu 22.04</p>
 </li></ul>
-
-<p>Install gem dependencies</p>
-
-<pre class="code ruby"><code class="ruby"><span class='id identifier rubyid_bundle'>bundle</span> <span class='id identifier rubyid_install'>install</span>
-</code></pre>
-
-<p>Run unit tests</p>
-
-<pre class="code ruby"><code class="ruby"><span class='id identifier rubyid_bundle'>bundle</span> <span class='id identifier rubyid_exec'>exec</span> <span class='id identifier rubyid_rake'>rake</span> <span class='id identifier rubyid_test'>test</span>
-</code></pre>
-
-<p>If you have Vagrant &gt;= 1.2.0 installed you can run system tests</p>
-
-<pre class="code ruby"><code class="ruby"><span class='id identifier rubyid_bundle'>bundle</span> <span class='id identifier rubyid_exec'>exec</span> <span class='id identifier rubyid_rake'>rake</span> <span class='id identifier rubyid_beaker'>beaker</span>
-</code></pre>
-
-<h2 id="label-TODO">TODO</h2>
-
-<h2 id="label-Further+Information">Further Information</h2>
-
-<p>*</p>
 </div></div>
 
       <div id="footer">
