--- a/puppet_classes/munge_3A_3Ainstall.html
+++ b/puppet_classes/munge_3A_3Ainstall.html
@@ -6,7 +6,7 @@
 <title>
   Puppet Class: munge::install
   
-    &mdash; Documentation by YARD 0.9.26
+    &mdash; Documentation by YARD 0.9.34
   
 </title>
 
@@ -82,6 +82,7 @@
 </div>
 
 
+
 <div class="tags">
   
 
@@ -107,27 +108,25 @@
 14
 15
 16
-17
-18</pre>
+17</pre>
       </td>
       <td>
         <pre class="code"><span class="info file"># File 'manifests/install.pp', line 3</span>
 
 class munge::install {
-
   package { &#39;munge&#39;:
-    ensure          =&gt; $::munge::package_ensure,
-    name            =&gt; $::munge::package_name,
-    install_options =&gt; $::munge::package_install_options,
+    ensure          =&gt; $munge::package_ensure,
+    name            =&gt; $munge::package_name,
+    install_options =&gt; $munge::package_install_options,
+    notify          =&gt; Service[&#39;munge&#39;],
   }
 
-  if $::munge::install_dev {
+  if $munge::install_dev {
     package { &#39;munge-devel&#39;:
-      ensure =&gt; $::munge::package_ensure,
-      name   =&gt; $::munge::dev_package_name,
+      ensure =&gt; $munge::package_ensure,
+      name   =&gt; $munge::dev_package_name,
     }
   }
-
 }</pre>
       </td>
     </tr>
